2007-05-07  Piotr Fusik  <fox@scene.pl>
* asap.c, asap_internal.h, apokeysnd.c: handle TYPE D and TYPE S SAP files


** 0.3.0 released on 2007-05-06

2007-05-06  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c: made stereo work

* asap2wav.c, win32/Makefile: ASAP2WAV with experimental POKEY emulator

* gsplayer/gspasap.txt, INSTALL: info about the GSPlayer plugin


2007-05-06  Kostas Nakos  <knakos@gmail.com>
* win32/Makefile, win32/config.h, win32/settings.rc: GSPlayer plugin
  for Windows CE


2007-05-05  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c, apokeysnd.h, asap.c, asap.h, win32/wasap/wasap.c,
  win32/wasap/wasap.rc, win32/Makefile: new experimental POKEY sound emulator


2007-05-04  Piotr Fusik  <fox@scene.pl>
* chksap.pl: TIME tag can include hundredths of seconds

* asapscan.c: if POKEY registers do not change then the song ends and not loops

* chksap.pl: -T overwrites TIME tags


2007-05-02  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, asap2wav.c, asapscan.c, chksap.pl, gsplayer/gspasap.c,
  win32/settings.c, win32/settings.h, win32/foobar2000/foo_asap.cpp,
  win32/wasap/wasap.c, win32/winamp/in_asap.c, xmms/libasap.c:
  millisecond precision of song length

* asapscan.c: improved loop detection (not only from the beginning of the song)

* asapscan.c: don't dump registers of the second POKEY for mono songs


2007-05-01  Piotr Fusik  <fox@scene.pl>
* asapscan.c, chksap.pl: detect POKEY features used, such as hi-pass filters

* gsplayer/gspasap.c: pass AUTHOR and NAME to GSPlayer

* win32/settings.c, win32/Makefile, gsplayer/gspasap.c, win32/winamp/in_asap.c:
  identical settings dialog box in Winamp and GSPlayer plugins

* xmms/libasap.c: implemented about, get_song_info and file_info_box


2007-04-30  Piotr Fusik  <fox@scene.pl>
* gsplayer/gspasap.c, gsplayer/gspasap.def, win32/Makefile: made the GSPlayer
  plugin work

* asap2wav.c: refactoring; "--raw" skips WAV headers, "-o -" writes